--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.6",
-    "webpack-dev-server": "^2.8.1"
+    "webpack-dev-server": ">=3.1.11"
   },
   "dependencies": {
     "history": "^4.7.2",
     "react": "16.0.0",
-    "react-dom": "16.0.0",
+    "react-dom": ">=16.0.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
